Bug 250127 - KDEPIM 4.5 Beta 3 crashes when journal is opened
Summary: KDEPIM 4.5 Beta 3 crashes when journal is opened
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: journalview (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-04 03:10 UTC by bluescreenavenger
Modified: 2010-09-19 15:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bluescreenavenger 2010-09-04 03:10:55 UTC
Application: kontact (4.5 beta1)
KDE Platform Version: 4.5.1 (KDE 4.5.1)
Qt Version: 4.7.0
Operating System: Linux 2.6.35-19-generic i686
Distribution: Ubuntu maverick (development branch)

-- Information about the crash:
- What I was doing when the application crashed:
When I added an item to the KDEPIM journal with Kalander, KDEPIM crashed. 

When I tried to open it it was empty (this was the first item I was adding to it). I tried adding  a new jornal item with Kalander again, KDEPIM crashed again.  I tried reopening the Journal, and KDEPIM crashed, this crash is the one thats in the backtrace.

The crash can be reproduced every time.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[Current thread is 1 (Thread 0xb7884730 (LWP 16634))]

Thread 3 (Thread 0xb5875b70 (LWP 16635)):
#0  0x00110416 in __kernel_vsyscall ()
#1  0x019bc4dc in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_wait.S:169
#2  0x086d5dad in __pthread_cond_wait (cond=0x7c9b770, mutex=0x7c9b758) at forward.c:139
#3  0x077933a5 in ?? () from /usr/lib/libQtWebKit.so.4
#4  0x07793481 in ?? () from /usr/lib/libQtWebKit.so.4
#5  0x019b7cc9 in start_thread (arg=0xb5875b70) at pthread_create.c:304
#6  0x086c86ae in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 2 (Thread 0xb337ab70 (LWP 16656)):
#0  0x019bb7d4 in __pthread_mutex_unlock_usercnt (mutex=0xa4d347c, decr=<value optimized out>) at pthread_mutex_unlock.c:52
#1  0x086d5fb6 in pthread_mutex_unlock (mutex=0xa4d347c) at forward.c:184
#2  0x01a0e2f4 in g_main_context_check () from /lib/libglib-2.0.so.0
#3  0x01a0ec1e in ?? () from /lib/libglib-2.0.so.0
#4  0x01a0f008 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#5  0x00808ecf in QEventDispatcherGlib::processEvents (this=0xa4ca5a0, flags=...) at kernel/qeventdispatcher_glib.cpp:414
#6  0x007d8f19 in QEventLoop::processEvents (this=0xb337a270, flags=) at kernel/qeventloop.cpp:149
#7  0x007d939a in QEventLoop::exec (this=0xb337a270, flags=...) at kernel/qeventloop.cpp:201
#8  0x006d5a9e in QThread::exec (this=0xa4ca6a8) at thread/qthread.cpp:490
#9  0x007b7e9b in QInotifyFileSystemWatcherEngine::run (this=0xa4ca6a8) at io/qfilesystemwatcher_inotify.cpp:248
#10 0x006d8d19 in QThreadPrivate::start (arg=0xa4ca6a8) at thread/qthread_unix.cpp:266
#11 0x019b7cc9 in start_thread (arg=0xb337ab70) at pthread_create.c:304
#12 0x086c86ae in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 1 (Thread 0xb7884730 (LWP 16634)):
[KCrash Handler]
#7  Akonadi::Calendar::collection (this=0x65636e65, id=@0xbf9c1b88) at ../../../akonadi/kcal/calendar.cpp:1864
#8  0x02a1cf36 in Akonadi::Calendar::hasChangeRights (this=0x65636e65, item=...) at ../../../akonadi/kcal/calendar.cpp:1876
#9  0xb29c7728 in JournalView::readJournal (this=0xa5e5f60, j=...) at ../../korganizer/views/journalview/journalview.cpp:306
#10 0xb29c8ad5 in JournalView (this=0xa5e5f60, j=..., parent=0xa73f220) at ../../korganizer/views/journalview/journalview.cpp:201
#11 0xb29c8fe4 in JournalDateView::addJournal (this=0xa73f220, j=...) at ../../korganizer/views/journalview/journalview.cpp:96
#12 0xb29c5b0d in KOJournalView::appendJournal (this=0xa5daa60, journal=..., dt=...) at ../../korganizer/views/journalview/kojournalview.cpp:94
#13 0xb29c5e28 in KOJournalView::showDates (this=0xa5daa60, start=..., end=...) at ../../korganizer/views/journalview/kojournalview.cpp:153
#14 0x04c138dd in KOrg::BaseView::setDateRange (this=0xa5daa60, start=..., end=...) at ../../../../korganizer/interfaces/korganizer/baseview.cpp:215
#15 0xb2a3649f in KOViewManager::updateView (this=0xa4eae78, start=..., end=...) at ../../korganizer/koviewmanager.cpp:281
#16 0xb2a1930f in CalendarView::updateView (this=0xa4eaa48, start=..., end=..., updateTodos=true) at ../../korganizer/calendarview.cpp:843
#17 0xb2a1b864 in CalendarView::updateView (this=0xa4eaa48) at ../../korganizer/calendarview.cpp:854
#18 0xb2a1892b in CalendarView::resourcesChanged (this=0xa4eaa48) at ../../korganizer/calendarview.cpp:3001
#19 0xb2a3399d in CalendarView::qt_metacall (this=0xa4eaa48, _c=QMetaObject::InvokeMetaMethod, _id=179, _a=0xbf9c221c) at ./calendarview.moc:614
#20 0x007e01da in QMetaObject::metacall (object=0xa4eaa48, cl=141898688, idx=206, argv=0xbf9c221c) at kernel/qmetaobject.cpp:237
#21 0x007f2fdd in QMetaObject::activate (sender=0xa5c2f68, m=0x2a9ab50, local_signal_index=0, argv=0x65636e65) at kernel/qobject.cpp:3280
#22 0x02a1aa07 in Akonadi::Calendar::calendarChanged (this=0xa5c2f68) at moc_calendar.cpp:95
#23 0x02a2e9c1 in Akonadi::Calendar::Private::itemsAdded (this=0xa5c3658, items=...) at ../../../akonadi/kcal/calendar.cpp:397
#24 0x02a2edd3 in Akonadi::Calendar::Private::rowsInserted (this=0xa5c3658, parent=..., start=0, end=3) at ../../../akonadi/kcal/calendar.cpp:115
#25 0x02a1b267 in Akonadi::Calendar::Private::qt_metacall (this=0xa5c3658, _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0xbf9c2430) at moc_calendar_p.cpp:148
#26 0x007e01da in QMetaObject::metacall (object=0xa5c3658, cl=141898688, idx=8, argv=0xbf9c2430) at kernel/qmetaobject.cpp:237
#27 0x007f2fdd in QMetaObject::activate (sender=0xa5c2fb0, m=0x90c198, local_signal_index=5, argv=0x65636e65) at kernel/qobject.cpp:3280
#28 0x00843cdf in QAbstractItemModel::rowsInserted (this=0xa5c2fb0, _t1=..., _t2=0, _t3=3) at .moc/release-shared/moc_qabstractitemmodel.cpp:181
#29 0x007d3503 in QAbstractItemModel::endInsertRows (this=0xa5c2fb0) at kernel/qabstractitemmodel.cpp:2413
#30 0x0159fb3d in QSortFilterProxyModelPrivate::insert_source_items (this=0xa5c3100, source_to_proxy=..., proxy_to_source=..., source_items=..., source_parent=..., orient=Qt::Vertical, 
    emit_signal=true) at itemviews/qsortfilterproxymodel.cpp:693
#31 0x0159febf in QSortFilterProxyModelPrivate::source_items_inserted (this=0xa5c3100, source_parent=..., start=0, end=3, orient=Qt::Vertical) at itemviews/qsortfilterproxymodel.cpp:804
#32 0x015a02cf in QSortFilterProxyModelPrivate::_q_sourceRowsInserted (this=0xa5c3100, source_parent=..., start=0, end=3) at itemviews/qsortfilterproxymodel.cpp:1278
#33 0x015a26df in QSortFilterProxyModel::qt_metacall (this=0xa5c2fb0, _c=QMetaObject::InvokeMetaMethod, _id=12, _a=0xbf9c2750) at .moc/release-shared/moc_qsortfilterproxymodel.cpp:135
#34 0x05ce7ab2 in Akonadi::EntityMimeTypeFilterModel::qt_metacall (this=0xa5c2fb0, _c=QMetaObject::InvokeMetaMethod, _id=37, _a=0xbf9c2750) at ./entitymimetypefiltermodel.moc:64
#35 0x007e01da in QMetaObject::metacall (object=0xa5c2fb0, cl=141898688, idx=37, argv=0xbf9c2750) at kernel/qmetaobject.cpp:237
#36 0x007f2fdd in QMetaObject::activate (sender=0xa5c2c10, m=0x90c198, local_signal_index=5, argv=0x65636e65) at kernel/qobject.cpp:3280
#37 0x00843cdf in QAbstractItemModel::rowsInserted (this=0xa5c2c10, _t1=..., _t2=0, _t3=3) at .moc/release-shared/moc_qabstractitemmodel.cpp:181
#38 0x007d3503 in QAbstractItemModel::endInsertRows (this=0xa5c2c10) at kernel/qabstractitemmodel.cpp:2413
#39 0x00c187f6 in KSelectionProxyModelPrivate::insertSelectionIntoProxy (this=0xa5c2cb8, selection=...) at ../../kdeui/itemviews/kselectionproxymodel.cpp:1709
#40 0x00c1ac36 in KSelectionProxyModelPrivate::selectionChanged (this=0xa5c2cb8, _selected=..., _deselected=...) at ../../kdeui/itemviews/kselectionproxymodel.cpp:1643
#41 0x00c1d0bf in KSelectionProxyModel::qt_metacall (this=0xa5c2c10, _c=QMetaObject::InvokeMetaMethod, _id=40, _a=0xbf9c2b74) at ./moc_kselectionproxymodel.cpp:134
#42 0x007e01da in QMetaObject::metacall (object=0xa5c2c10, cl=141898688, idx=40, argv=0xbf9c2b74) at kernel/qmetaobject.cpp:237
#43 0x007f2fdd in QMetaObject::activate (sender=0xa5b2af0, m=0x18c0a70, local_signal_index=0, argv=0x65636e65) at kernel/qobject.cpp:3280
#44 0x01560589 in QItemSelectionModel::selectionChanged (this=0xa5b2af0, _t1=..., _t2=...) at .moc/release-shared/moc_qitemselectionmodel.cpp:152
#45 0x015637d0 in QItemSelectionModel::emitSelectionChanged (this=0xa5b2af0, newSelection=..., oldSelection=...) at itemviews/qitemselectionmodel.cpp:1525
#46 0x01564f64 in QItemSelectionModel::select (this=0xa5b2af0, selection=..., command=...) at itemviews/qitemselectionmodel.cpp:1088
#47 0x01561f50 in QItemSelectionModel::select (this=0xa5b2af0, index=..., command=...) at itemviews/qitemselectionmodel.cpp:976
#48 0x02b2e251 in Akonadi::CollectionSelectionProxyModel::setData (this=0xa511c60, index=..., value=..., role=10) at ../../../akonadi/akonadi_next/collectionselectionproxymodel.cpp:127
#49 0x01598e08 in QSortFilterProxyModel::setData (this=0xa5b9b68, index=..., value=..., role=10) at itemviews/qsortfilterproxymodel.cpp:1727
#50 0x01598e08 in QSortFilterProxyModel::setData (this=0xa5b56b0, index=..., value=..., role=10) at itemviews/qsortfilterproxymodel.cpp:1727
#51 0x01598e08 in QSortFilterProxyModel::setData (this=0xa5be4e0, index=..., value=..., role=10) at itemviews/qsortfilterproxymodel.cpp:1727
#52 0x015c12f8 in QStyledItemDelegate::editorEvent (this=0xa5bca68, event=0xbf9c3ad0, model=0xa5be4e0, option=..., index=...) at itemviews/qstyleditemdelegate.cpp:752
#53 0x0150bd70 in QAbstractItemViewPrivate::sendDelegateEvent (this=0xa5b5b20, index=..., event=0xbf9c3ad0) at itemviews/qabstractitemview.cpp:4073
#54 0x0150bf88 in QAbstractItemView::edit (this=0xa5b9b80, index=..., trigger=QAbstractItemView::NoEditTriggers, event=0xbf9c3ad0) at itemviews/qabstractitemview.cpp:2533
#55 0x0150e670 in QAbstractItemView::mouseReleaseEvent (this=0xa5b9b80, event=0xbf9c3ad0) at itemviews/qabstractitemview.cpp:1777
#56 0x015562ac in QTreeView::mouseReleaseEvent (this=0xa5b9b80, event=0xbf9c3ad0) at itemviews/qtreeview.cpp:1828
#57 0x00f964d8 in QWidget::event (this=0xa5b9b80, event=0xbf9c3ad0) at kernel/qwidget.cpp:8157
#58 0x013b5943 in QFrame::event (this=0xa5b9b80, e=0xbf9c3ad0) at widgets/qframe.cpp:557
#59 0x01452ce2 in QAbstractScrollArea::viewportEvent (this=0x87533c0, e=0x0) at widgets/qabstractscrollarea.cpp:1043
#60 0x0150f377 in QAbstractItemView::viewportEvent (this=0xa5b9b80, event=0xbf9c3ad0) at itemviews/qabstractitemview.cpp:1619
#61 0x01551aa3 in QTreeView::viewportEvent (this=0xa5b9b80, event=0xbf9c3ad0) at itemviews/qtreeview.cpp:1256
#62 0x01455735 in QAbstractScrollAreaPrivate::viewportEvent (this=0xa5b6810, o=0xa5b5908, e=0xbf9c3ad0) at widgets/qabstractscrollarea_p.h:100
#63 QAbstractScrollAreaFilter::eventFilter (this=0xa5b6810, o=0xa5b5908, e=0xbf9c3ad0) at widgets/qabstractscrollarea_p.h:116
#64 0x007d9baa in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x8f29a30, receiver=0xa5b5908, event=0xbf9c3ad0) at kernel/qcoreapplication.cpp:847
#65 0x00f38a09 in QApplicationPrivate::notify_helper (this=0x8f29a30, receiver=0xa5b5908, e=0xbf9c3ad0) at kernel/qapplication.cpp:4385
#66 0x00f3f67e in QApplication::notify (this=0xbf9c4384, receiver=0xa5b5908, e=0xbf9c3ad0) at kernel/qapplication.cpp:3952
#67 0x00c2f44a in KApplication::notify (this=0xbf9c4384, receiver=0xa5b5908, event=0xbf9c3ad0) at ../../kdeui/kernel/kapplication.cpp:310
#68 0x007da44b in QCoreApplication::notifyInternal (this=0xbf9c4384, receiver=0xa5b5908, event=0xbf9c3ad0) at kernel/qcoreapplication.cpp:732
#69 0x00f3dae4 in QCoreApplication::sendEvent (receiver=0xa5b5908, event=0xbf9c3ad0, alienWidget=0xa5b5908, nativeWidget=0x9022960, buttonDown=0x18cf300, lastMouseReceiver=..., spontaneous=true)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#70 QApplicationPrivate::sendMouseEvent (receiver=0xa5b5908, event=0xbf9c3ad0, alienWidget=0xa5b5908, nativeWidget=0x9022960, buttonDown=0x18cf300, lastMouseReceiver=..., spontaneous=true)
    at kernel/qapplication.cpp:3051
#71 0x00fcc1d0 in QETWidget::translateMouseEvent (this=0x9022960, event=0xbf9c3fec) at kernel/qapplication_x11.cpp:4403
#72 0x00fcb611 in QApplication::x11ProcessEvent (this=0xbf9c4384, event=0xbf9c3fec) at kernel/qapplication_x11.cpp:3414
#73 0x00ffa82a in x11EventSourceDispatch (s=0x8f2da68, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#74 0x01a0b015 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#75 0x01a0ee28 in ?? () from /lib/libglib-2.0.so.0
#76 0x01a0f008 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#77 0x00808e95 in QEventDispatcherGlib::processEvents (this=0x8f03c40, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#78 0x00ffa0a5 in QGuiEventDispatcherGlib::processEvents (this=0x8f03c40, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#79 0x007d8f19 in QEventLoop::processEvents (this=0xbf9c42e4, flags=) at kernel/qeventloop.cpp:149
#80 0x007d939a in QEventLoop::exec (this=0xbf9c42e4, flags=...) at kernel/qeventloop.cpp:201
#81 0x007dd91f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#82 0x00f37857 in QApplication::exec () at kernel/qapplication.cpp:3665
#83 0x0804b0d6 in main (argc=1, argv=0xbf9c45a4) at ../../../kontact/src/main.cpp:218

Reported using DrKonqi
Comment 1 Sergio Martins 2010-09-19 15:04:42 UTC
SVN commit 1177108 by smartins:

Pass the calendar in the ctor, don't set it later, it's needed now.

Fixes crash

BUG: 250127

MERGE: trunk


 M  +3 -4      journalview.cpp  
 M  +1 -1      journalview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1177108
Comment 2 Sergio Martins 2010-09-19 15:21:43 UTC
SVN commit 1177111 by smartins:

SVN_SILENT

Fwdport r1177108 from branch 4.5 to trunk:

Pass the calendar in the ctor, don't set it later, it's needed now.

Fixes crash

CCBUG: 250127

 M  +14 -14    journalview.cpp  
 M  +5 -2      journalview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1177111