Pass the calendar in the ctor, don't set it later, it's needed now.

Fixes crash

BUG: 250127

MERGE: trunk

svn path=/branches/KDE/4.5/kdepim/; revision=1177108